kube-ops/grafana-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana
  namespace: kube-ops
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      name: http
