kube-ops/ingress-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress-jenkins
  namespace: kube-ops
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  # 路由规则
  rules:
  - host: jenkins.k8s.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            # 后台部署的 Service Name
            name: jenkins
            # 后台部署的 Service Port
            port:
              number: 8080
